--- a/Thinking_Notes/TN_501001.md
+++ b/Thinking_Notes/TN_501001.md
@@ -51,3 +51,10 @@ Reading book, article or watching guideline has the effect of creating more Cont
     - Contexts: book and implement from scratch `80%`
 - **27/04 - 04/05**: Continue
 - **05/05 -**: Continue 
+
+### From paper: learning notes in AI era
+
+- Diễn giải và hiểu các đầu ra của hệ thống AI. Điều này bao gồm các kỹ năng để hiểu các nguồn dữ liệu và độ tin cậy của các đầu ra của hệ thống AI, cũng như sự nhạy cảm với các lỗi có thể xảy ra
+- Tích hợp đầu ra AI vào hệ thống kiến ​​thức của con người. Khi AI tạo ra đầu ra, con người cần phải hành động . Ngay cả trong những trường hợp AI đưa ra quyết định nhanh chóng ở mức độ mà con người không thể thực hiện (chẳng hạn như giao dịch chứng khoán tự động hoặc phát hiện rủi ro bằng phần mềm bảo mật), con người vẫn là tác nhân hành động cuối cùng ở cấp độ tổng hợp.
+- Con người sẽ cần nâng cao công việc nhận thức của mình lên một lĩnh vực mà AI kém khả năng hơn. Các hoạt động kiến ​​thức, chẳng hạn như tạo ra ý nghĩa và tạo ra ý nghĩa sẽ ngày càng quan trọng. Tương tự như vậy, các hành động sáng tạo, chẳng hạn như động não và tư duy phân kỳ sẽ trở thành những khả năng quan trọng hơn.
+    - Tư duy phân kỳ đề cập đến quá trình nhận thức tạo ra nhiều khả năng sáng tạo và các mối liên hệ mới lạ, thường được đánh giá bằng các nhiệm vụ như suy nghĩ về nhiều cách sử dụng khác thường cho một vật thể chung.
