--- a/Thinking_Notes/TN_501001.md
+++ b/Thinking_Notes/TN_501001.md
@@ -1,8 +1,14 @@
 # 05/04/2025
 
-**`Learning must be based on Context`**
+[P] **`Learning must be based on Context.`** <br>
+[P] **`Deep learning is deep understanding small but interconnected pieces of knowledge`**
 
-Reading book, article or watching guideline has the effect of creating more Context for myself.
+- Reading book, article or watching guideline has the effect of creating more Context for myself.
+- People learn = AI learn: Deep learning is understanding small but interconnected pieces of knowledge.
+
+---
+
+**Catalog**
 
 - [About learning method](#about-learning-method)  
 - [Choose mindset](#choose-mindset)  
