--- a/1.0.0/c7dq63.md
+++ b/1.0.0/c7dq63.md
@@ -1,7 +1,7 @@
 # DDD Trong Thực Tế: Không phải "giấc mơ phòng lab"
 
 - Đa phần dự án bạn làm sẽ là brownfield (dự án cũ, code legacy, technical debt đầy mình).
-- Irony: Chính những dự án này mới cần DDD nhất – để gỡ rối, phục hồi domain knowledge, và tổ chức lại hệ thống.
+- Chính những dự án này mới cần DDD nhất – để gỡ rối, phục hồi domain knowledge, và tổ chức lại hệ thống.
 
 ## Checklist Áp Dụng DDD Trong Dự Án Legacy
 
@@ -92,7 +92,7 @@
         - Bạn đang xây dựng cache cục bộ để tăng hiệu năng hoặc hỗ trợ hoạt động offline.
         - Cần đồng bộ hóa trạng thái một cách bất đồng bộ giữa các dịch vụ.
         - Ưu điểm:
-            -Consumer có thể tự xử lý mà không cần truy cập hệ thống khác.
+            - Consumer có thể tự xử lý mà không cần truy cập hệ thống khác.
             - Phù hợp với các hệ thống đọc nhiều dữ liệu (ví dụ như backend cho frontend).
             - Giúp hệ thống resilient (chịu lỗi tốt) nếu hệ thống nguồn không khả dụng.
         - Nhược điểm:
@@ -123,5 +123,6 @@
     - Trong khi đó, mô hình phân tích thường sử dụng dữ liệu đã được tổng hợp (aggregated) nhằm phục vụ các tình huống sử dụng hiệu quả hơn.
 - snowflake schema
     - các dimension được chuẩn hoá thêm thành nhiều cấp
-    - Việc chuẩn hoá thêm này giúp mô hình tiết kiệm không gian lưu trữ hơn và dễ bảo trì hơn. Tuy nhiên, để truy vấn dữ liệu từ fact sẽ cần nối (join) nhiều bảng hơn, dẫn đến việc tiêu tốn nhiều tài nguyên tính toán hơn.
+    - Việc chuẩn hoá thêm này giúp mô hình tiết kiệm không gian lưu trữ hơn và dễ bảo trì hơn. 
+    - Tuy nhiên, để truy vấn dữ liệu từ fact sẽ cần nối (join) nhiều bảng hơn, dẫn đến việc tiêu tốn nhiều tài nguyên tính toán hơn.
 - Data lake có thể trở thành data swamp (đầm lầy dữ liệu).
